apps/seedbox/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: seedbox
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 80
    targetPort: 7878
    protocol: TCP
